Cleanup repository settings definitions used for validation at 'Create Repository' statements - hdfs